tests/lang/errors/try_soften_orelse.neon
// `try?` composes with `orelse`: `try? parse(s) orelse 0`. The `try?` produces
// `i64 | null` and `orelse` consumes the null half, so the whole expression is a
// plain `i64` with no match and no annotation.
//
// The default must be taken only on the error path — the success path keeps its
// own value, which is why 42 and 0 both appear below.

use std::io;
use std::string;

fn main() {
    let good = try? string::to_int("42") orelse 0;
    io::println(to_string(good));

    let bad = try? string::to_int("not a number") orelse 0;
    io::println(to_string(bad));

    // `orelse` is lazy on the left's success: the fallback is a whole
    // expression, not a constant, and is not evaluated when there is a value.
    let sum = (try? string::to_int("10") orelse 0) + (try? string::to_int("x") orelse -1);
    io::println(to_string(sum));
}
